frontend/tests/cases/negative/indexed/caseOnIndexed.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/indexed/caseOnIndexed.gr:9:5:
Cannot use a `case` pattern match on indexed type Vec n Int. Define a specialised function instead.